# chit_chat_backend

./: Cargo.toml  README.md
src/: main.rs
src/model/: chat.rs  mod.rs  room.rs  user.rs
src/router/: chat.rs  mod.rs  room.rs  user.rs  utils.rs
src/utils/: mod.rs
