[package]
edition = "2021"
name = "chit_chat_backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2"
actix-session = "0.4"
actix-web = "3"
derive-getters = "0.2.0"
env_logger = "0.9"
lazy_static = "1.4"
log = "0.4"
serde = "1.0"
serde_repr = "0.1"

[dev-dependencies]
actix-rt = "1"
